examples/type_system/failing/64_hm_inferred_call_mismatch.flx
fn id(x) {
    x
}

fn main() {
    let f = id
    let a: Int = f(1)
    let b: Int = f("x")
    print(to_string(a + b))
}
